@@ -59,6 +59,11 @@
 <section id="html5-character-encoding">
 <h2>HTML5 Character Encoding Errors</h2>
 
+<div class="section" id="charset:not-supported"><h3>Character encoding <code><var>{value}</var></code>
+  is not supported and the explicit character encoding specification is
+  ignored.  The result of the conformance checking might be
+  <em>wrong</em>.</h3></div>
+
 <div class="section" id="disallowed-character-encoding"><h3>Character encoding <code><var>{text}</var></code>
   is not allowed for <abbr>HTML</abbr> document.</h3>
     <p>The character encoding used for the document is not allowed
@@ -2922,6 +2927,6 @@ p {
 and/or modify it under the same terms as Perl itself.</p>
 </section>
 
-<!-- $Date: 2008/09/20 04:47:35 $ -->
+<!-- $Date: 2008/09/21 05:09:35 $ -->
 </body>
 </html>
