@@ -144,6 +144,11 @@ applied.
   <td>Same as <code>img</code> <code>src</code> [HTML5]
   <tr><td><code>img</code><td><code>longdesc</code>
   <td>Same as <code>img</code> <code>src</code> [HTML5]
+
+  <tr><td><code>input</code><td><code>accept-charset</code>
+  <td>Same as <code>accept-charset</code> attribute of the
+  <code>form</code> element [HTML5]
+
   <tr><td><code>object</code><td><code>classid</code> or <code>codebase</code>
   <td>Same as <code>img</code> <code>src</code> [HTML5]
   <tr><td><code>object</code><td><code>archive
