@@ -1,3 +1,8 @@
+2008-09-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* error-description-source.xml: An error for non-supported
+	charset="" parameter is added.
+
 2008-09-20  Wakaba  <wakaba@suika.fam.cx>
 
 	* error-description-source.xml: New error for accept-charset="".
